welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: Unmatched closing brace '}' ignored here
    return true}
               ^SlugTracking:7: error: ';' expected but 'else' found.
  else if (getCouleurSol()==Color.green){
  ^SlugTracking:17: error: ';' expected but 'else' found.
  else if (estFaceMur())
  ^